<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_note"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:shortcutShortLabel="@string/shortcut_new_note"
        android:shortcutLongLabel="@string/shortcut_new_note_long"
        android:shortcutDisabledMessage="@string/shortcut_new_note_disabled">
        <intent
            android:action="com.qingjian.notes.action.NEW_NOTE"
            android:targetPackage="com.qingjian.notes"
            android:targetClass="com.qingjian.notes.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.qingjian.notes.action.SEARCH"
            android:targetPackage="com.qingjian.notes"
            android:targetClass="com.qingjian.notes.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="stats"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:shortcutShortLabel="@string/shortcut_stats"
        android:shortcutLongLabel="@string/shortcut_stats_long">
        <intent
            android:action="com.qingjian.notes.action.STATS"
            android:targetPackage="com.qingjian.notes"
            android:targetClass="com.qingjian.notes.MainActivity" />
    </shortcut>
</shortcuts>
